# market-maker-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: run_dbo_bitmex.rs
src/: apikey.rs  bot.rs  lib.rs  logger.rs  observation.rs  pubsub.rs
src/components/: mod.rs  order_service.rs
src/implements/: mod.rs
src/implements/exchanges/bitmex/: broker.rs  market.rs  mod.rs  parser.rs  status.rs
src/implements/writers/: mod.rs  open_orders_writer.rs  orderbook_writer.rs
src/interfaces/: exchange.rs  mod.rs  strategy.rs
src/strategies/: dbo.rs  mod.rs
src/types/: execution.rs  info.rs  inventory.rs  mod.rs  order.rs  orderbook.rs  values.rs
