[package]
name = "market-maker"
version = "0.1.0"
edition = "2021"
authors = ["magito <magito.dev@gmail.com>"]
license = "MIT"
description = "A framework for market-maker bots"
rust-version = "1.65"

[dependencies]
log = "0.4"
log4rs = "1"
anyhow = "1"
thiserror = "1"
rust_decimal = "1"
rust_decimal_macros = "1"
crossbeam-channel = "0.5"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

bitmex = { version = "0.2.2", git = "https://github.com/dovahcrow/bitmex-rs.git" }
